- #error_link added for testing purpose; - alias wasn't necessary; - a tag :turbolinks shortcut added; - rake sandbox:build task added; - options added to #app_link helper;

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,3 +42,5 @@ en:
         list/tree/leaf/multi: Leaf page
       page_field/name:
         list_texts: List of pages texts
+  link:
+    error: Error
